--- a/accounts/templates/admins/managepatient.html
+++ b/accounts/templates/admins/managepatient.html
@@ -15,7 +15,7 @@
 									<li class="breadcrumb-item"><a href="javascript:(0);">Users</a></li>
 									<li class="breadcrumb-item active">Patient</li>
 								</ul>
-								{% if perms.accounts.view_patient %}
+								{% if perms.accounts.add_patient %}
 								<a href="#add_patient" class="btn btn-primary"  data-toggle="modal">
 									<i class="fe fe-plus"></i>New</a>
 							{% endif %}
