--- a/accounts/templates/register_doctor.html
+++ b/accounts/templates/register_doctor.html
@@ -150,6 +150,15 @@
 										<input name="phone" class="form-control" type="tel" pattern="[0-9]{10}" title="insert number,maxmum number is 10 digits" placeholder="Phone Number" required>
 									</div>
 									<div class="form-group">
+										<label>Speciality</label>
+										<br>
+										{% for s in t %}
+										<input type="checkbox" name="{{s.name}}" value="{{s.id}}">{{s.name}}
+										
+										{% endfor %}
+									</div>
+
+									<div class="form-group">
 										<input name="password1" class="form-control" id="myInput" type="password" placeholder="Password"  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
 									</div>
 									<div class="form-group">
